--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @events.size%> Events:</h1>
+<h1><%= pluralize(@events.size,'event')%>:</h1>
 
 <ul>
     <%@events.each do |event|%>
@@ -6,7 +6,7 @@
         <header>
         <h2><%=event.name%></h2>
         </header>
-        <p><%=event.description%></p>
+        <p><%=truncate(event.description,length: 30, separator: ' ')%></p>
         <table>
         <tr>
         <th>When:</th>
@@ -16,7 +16,7 @@
         <td><%=event.location%></td>
         </tr>
         <th>Price:</th>
-        <td><%=number_to_currency(event.price)%></td>
+        <td><%=format_price(event)%></td>
         </tr>
         </table>
         </article>
